<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.kurantsou.balinasofttestproject.model.uimodel.RegisterModel" />

        <variable
            name="model"
            type="RegisterModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.RegisterFragment">


        <android.support.constraint.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="text"
                android:text="@={model.login}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/loginWrapper">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={model.password}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/passwordWrapper">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={model.confirmPassword}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{model.correct}"
            android:text="@string/btn_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordWrapper" />

    </android.support.constraint.ConstraintLayout>
</layout>